# Bayesian-Filtering-and-Smoothing

./: .gitignore  .gitmodules  README.md  pyproject.toml
notebooks/ch01_regression/: ch01_linear_gaussian_regression_batch_vs_recursive.ipynb
notebooks/ch02_filtering/: 02_extended_kalman_filter.ipynb  03_gauss_hermite_kalman_filter.ipynb  04_unscented_kalman_filter.ipynb  05_particle_filter.ipynb  ch02_kalman_filter.ipynb
src/filters/: bootstrap_particle_filter.py  ekf_particle_filter.py  extended_kalman_filter.py  gauss_hermite_kalman_filter.py  kalman_filter.py  particle_filter.py  ukf_particle_filter.py  unscented_kalman_filter.py
src/models/: pendulum.py
src/regression/: animate_linear_regression.py  linear_regression.py
src/utils/: gaussian_utils.py
