[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-filtering-and-smoothing"
version = "0.1.0"
description = "Bayesian filtering, smoothing, and linear-Gaussian regression"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["regression"]